// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LedgerTabs should render connection step 1`] = `
<div>
  <div>
    <ul
      class="StepIndicator__StepWrapper-sc-15t41is-1 iToWWb"
    >
      <li
        class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
      />
      <li
        class="StepIndicator__StepStyled-sc-15t41is-0 khoCaB"
      />
      <li
        class="StepIndicator__StepStyled-sc-15t41is-0 khoCaB"
      />
      <li
        class="StepIndicator__StepStyled-sc-15t41is-0 khoCaB"
      />
    </ul>
    <div
      class="mt-8"
      data-testid="LedgerTabs"
    >
      <div
        data-testid="tab-pabel__active-panel"
      >
        <section
          data-testid="NetworkStep"
        >
          <div
            class="flex justify-between items-end bg-theme-background"
          >
            <div
              class="space-y-4"
            >
              <h1
                class="mb-0 text-3xl"
                data-testid="header__title"
              >
                Select a Cryptoasset
              </h1>
              <div
                class="text-theme-secondary-text"
                data-testid="header__subtitle"
              >
                Select a cryptoasset to import your existing wallet address.
              </div>
            </div>
          </div>
          <fieldset
            class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col mt-8 space-y-2"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="network"
            >
              Cryptoasset
            </label>
            <div>
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="NetworkStep__network-menu"
                data-testid="SelectNetwork"
                role="combobox"
              >
                <label
                  for="NetworkStep__network-input"
                  id="NetworkStep__network-label"
                />
                <div
                  class="fixed invisible w-auto whitespace-nowrap"
                >
                  
                  …
                </div>
                <div
                  class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
                >
                  <div
                    class="Circle__CircleWrapper-uw7h4j-0 grnDUY border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500 ring-theme-background"
                    data-testid="SelectNetworkInput__network"
                  />
                  <div
                    class="relative flex flex-1 h-full"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="NetworkStep__network-menu"
                      aria-labelledby="NetworkStep__network-label"
                      autocomplete="off"
                      class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="SelectNetworkInput__input"
                      id="NetworkStep__network-input"
                      placeholder="Enter a cryptoasset name"
                      value=""
                    />
                    
                  </div>
                </div>
              </div>
              <div
                class=""
                data-testid="SelectNetwork__options"
              >
                <div
                  class="mt-6"
                >
                  <div
                    class="mb-3 text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
                  >
                    PUBLIC NETWORKS
                  </div>
                  <ul
                    aria-labelledby="NetworkStep__network-label"
                    class="grid grid-cols-6 gap-3"
                    id="NetworkStep__network-menu"
                    role="listbox"
                  >
                    <li
                      class="inline-block cursor-pointer h-21"
                      data-testid="SelectNetwork__NetworkIcon--container"
                    >
                      <div
                        aria-label="ARK"
                        class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                        data-testid="NetworkIcon-ARK-ark.mainnet"
                      >
                        <div
                          class="sc-bdfBwQ ffTEMV"
                          data-testid="NetworkIcon__icon"
                          height="30"
                          width="30"
                        >
                          <svg>
                            ark.svg
                          </svg>
                        </div>
                      </div>
                    </li>
                    <li
                      class="inline-block cursor-pointer h-21"
                      data-testid="SelectNetwork__NetworkIcon--container"
                    >
                      <div
                        aria-label="Compendia"
                        class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                        data-testid="NetworkIcon-ARK-bind.mainnet"
                      >
                        <div
                          class="sc-bdfBwQ ffTEMV"
                          data-testid="NetworkIcon__icon"
                          height="30"
                          width="30"
                        >
                          <svg>
                            bind.svg
                          </svg>
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
                <div
                  class="mt-6"
                >
                  <div
                    class="mb-3 text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
                  >
                    DEVELOPMENT NETWORKS
                  </div>
                  <ul
                    aria-labelledby="NetworkStep__network-label"
                    class="grid grid-cols-6 gap-3"
                    id="NetworkStep__network-menu"
                    role="listbox"
                  >
                    <li
                      class="inline-block cursor-pointer h-21"
                      data-testid="SelectNetwork__NetworkIcon--container"
                    >
                      <div
                        aria-label="ARK Devnet"
                        class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
                        data-testid="NetworkIcon-ARK-ark.devnet"
                      >
                        <div
                          class="sc-bdfBwQ ffTEMV"
                          data-testid="NetworkIcon__icon"
                          height="30"
                          width="30"
                        >
                          <svg>
                            ark.svg
                          </svg>
                        </div>
                      </div>
                    </li>
                    <li
                      class="inline-block cursor-pointer h-21"
                      data-testid="SelectNetwork__NetworkIcon--container"
                    >
                      <div
                        aria-label="Compendia Testnet"
                        class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
                        data-testid="NetworkIcon-ARK-bind.testnet"
                      >
                        <div
                          class="sc-bdfBwQ ffTEMV"
                          data-testid="NetworkIcon__icon"
                          height="30"
                          width="30"
                        >
                          <svg>
                            bind.svg
                          </svg>
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </fieldset>
        </section>
      </div>
    </div>
    <div
      class="flex justify-between mt-10"
    >
      <div />
      <div
        class="flex space-x-3"
      >
        <button
          class="OriginalButton__StyledButton-sc-1y2wptt-0 icFlST"
          data-testid="Paginator__back-button"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Back
          </div>
        </button>
        <button
          class="OriginalButton__StyledButton-sc-1y2wptt-0 fqRthJ"
          data-testid="Paginator__continue-button"
          disabled=""
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Continue
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`LedgerTabs should render scan step with failing fetch 1`] = `
<div>
  <div>
    <ul
      class="StepIndicator__StepWrapper-sc-15t41is-1 iToWWb"
    >
      <li
        class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
      />
      <li
        class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
      />
      <li
        class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
      />
      <li
        class="StepIndicator__StepStyled-sc-15t41is-0 khoCaB"
      />
    </ul>
    <div
      class="mt-8"
      data-testid="LedgerTabs"
    >
      <div
        data-testid="tab-pabel__active-panel"
      >
        <section
          class="space-y-8"
          data-testid="LedgerScanStep"
        >
          <div
            class="flex justify-between items-end bg-theme-background"
          >
            <div
              class="space-y-4"
            >
              <h1
                class="mb-0 text-3xl"
                data-testid="header__title"
              >
                Accounts
              </h1>
              <div
                class="text-theme-secondary-text"
                data-testid="header__subtitle"
              >
                Select the addresses that you want to import.
              </div>
            </div>
          </div>
          <fieldset
            class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="network"
            >
              Cryptoasset
            </label>
            <div>
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="ImportWallet__network-menu"
                data-testid="SelectNetwork"
                role="combobox"
              >
                <label
                  for="ImportWallet__network-input"
                  id="ImportWallet__network-label"
                />
                <div
                  class="fixed invisible w-auto whitespace-nowrap"
                >
                  
                  …
                </div>
                <div
                  class="Input__InputWrapperStyled-wu99qs-0 iRRxpY"
                  disabled=""
                >
                  <div
                    aria-label="ARK Devnet"
                    class="Circle__CircleWrapper-uw7h4j-0 grnDUY border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500 ring-theme-background"
                    data-testid="SelectNetworkInput__network"
                  >
                    <div
                      class="sc-bdfBwQ hjDozt"
                      data-testid="NetworkIcon__icon"
                      height="20"
                      width="20"
                    >
                      <svg>
                        ark.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="relative flex flex-1 h-full"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="ImportWallet__network-menu"
                      aria-labelledby="ImportWallet__network-label"
                      autocomplete="off"
                      class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full text-theme-secondary-text"
                      data-testid="SelectNetworkInput__input"
                      disabled=""
                      id="ImportWallet__network-input"
                      placeholder="Enter a cryptoasset name"
                      value=""
                    />
                    
                  </div>
                </div>
              </div>
              <div
                class=""
                data-testid="SelectNetwork__options"
              >
                <div
                  class=""
                >
                  <ul
                    aria-labelledby="ImportWallet__network-label"
                    class="grid grid-cols-6 gap-3"
                    id="ImportWallet__network-menu"
                    role="listbox"
                  />
                </div>
              </div>
            </div>
          </fieldset>
          <div
            class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-danger-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
          >
            <div
              class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-danger-400"
            >
              <div
                class="sc-bdfBwQ gkYIJl"
                height="1.25em"
                width="1.25em"
              >
                <svg>
                  alert-danger.svg
                </svg>
              </div>
            </div>
            <div
              class="flex flex-col w-full"
            >
              <div
                class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
              >
                <span
                  data-testid="LedgerScanStep__error"
                >
                  Scan Failed
                </span>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      class="flex justify-between mt-10"
    >
      <div>
        <button
          class="OriginalButton__StyledButton-sc-1y2wptt-0 icFlST"
          data-testid="Paginator__retry-button"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ dnaihB"
              height="1em"
              width="1em"
            >
              <svg>
                reset.svg
              </svg>
            </div>
            <span>
              Retry
            </span>
          </div>
        </button>
      </div>
      <div
        class="flex space-x-3"
      >
        <button
          class="OriginalButton__StyledButton-sc-1y2wptt-0 icFlST"
          data-testid="Paginator__back-button"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Back
          </div>
        </button>
        <button
          class="OriginalButton__StyledButton-sc-1y2wptt-0 fqRthJ"
          data-testid="Paginator__continue-button"
          disabled=""
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Continue
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
